# fast-pypi

./: .editorconfig  .gitignore  Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json
fast_pypi/: app.py  env.py  router.py  templates.py
m/: m.yaml
tests/test_server/: __main__.py  test_server_main.py
