
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.5.1"]

[tool]

  [tool.poetry]
    authors = ["LYB Advanced Analytics <advanalyticsadm@lyondellbasell.com>"]
    description = "Utilities library for Nexus python apps"
    name = "lyb-nexus-utils"
    readme = "README.md"
    version = "0.0.0.dev0"

    [tool.poetry.dependencies]
      fastapi = "^0.95.0"
      orjson = "^3.8.7"
      pydantic = "^1.10.6"
      python = "~3.10"

    [tool.poetry.group]

      [tool.poetry.group.build]
        optional = true

        [tool.poetry.group.build.dependencies]
          build = "^0.10.0"
          jmlopez-m = "^0.18.1"
          twine = "^4.0.2"

      [tool.poetry.group.dev]
        optional = true

        [tool.poetry.group.dev.dependencies]
          add-trailing-comma = "^2.4.0"
          asgi-lifespan = "^2.0.0"
          bandit = "^1.7.4"
          coverage = "^7.2.1"
          flake8-use-fstring = "^1.4.0"
          httpx = "^0.23.3"
          isort = "^5.12.0"
          mypy = "^1.1.1"
          pyformat = "^0.7.0"
          pylint = "^2.16.2"
          pytest = "^7.2.1"
          pytest-asyncio = "^0.20.3"
          pytest-mock = "^3.10.0"
          wemake-python-styleguide = "^0.17.0"

    [[tool.poetry.packages]]
      from = "."
      include = "fast_pypi"
